--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://aharonreiss.github.io/duck-duck-image",
+  "homepage": "http://aharonreiss.github.io/duck-duck-image/#",
   "name": "duckduckproject",
   "version": "0.3.0",
   "private": true,
