--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "i18next": "^23.1.0",
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.0",
     "react-router-dom": "^6.13.0",
-    "react-scripts": "5.0.1",
-    "typescript": "5.1.0",
+    "react-scripts": "^5.0.1",
+    "typescript": "^5.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set HTTPS=true&&set SSL_CRT_FILE=./reactcert/cert.pem&& set SSL_KEY_FILE=./reactcert/key.pem&& set REACT_APP_BACK_URL=http://localhost:8000&& react-scripts start",
+    "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
